add command to reduce logging