@@ -1,3 +1,4 @@
 python ./tools/excelReader.py
 javac -cp  dependencies/* Automation.java FX400.java ZoneList.java Zone.java ReadTempArray.java DataEntryBot.java
-java -cp  dependencies/* Automation.java
+java --enable-native-access=ALL-UNNAMED -cp dependencies/* Automation.java
+
